<resources>
    <string name="app_name">Smartphone</string>
    <string name="img_logo">img logo</string>
    <string name="phone">Available Smartphone</string>
    <string name="type_phone">Type Phone</string>
    <string name="image_phone">image phone</string>
    <string name="price">Price: Rp</string>
    <string name="price_without_rp">Price: </string>
    <string name="detail_phone">detail phone</string>
    <string name="color">Color</string>
    <string name="opsi_payment">Payment Method</string>
    <string name="opsi_payment_2dot">Payment Method: </string>
    <string name="buy">buy</string>
    <string name="checkout">checkout</string>
    <string name="full_detail">Full Specifications: </string>
    <string name="display">Display: </string>
    <string name="hardware">Hardware:</string>
    <string name="brand">Brand:</string>
    <string name="name">Full Name: </string>
    <string name="autofill_name">Name: </string>
    <string name="address">Address</string>
    <string name="address_2dot">Address: </string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_valid_address">Enter Your Valid Address</string>
    <string name="enter_your_valid_phone_number">Enter Your Valid Phone Number</string>
    <string name="enter_your_valid_email">Enter Your Valid Email</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_2dot">Email Address:</string>
    <string name="success_subTitle">Please check your email in next few hours \nfor further information about your order</string>
    <string name="success_title">Order has been received</string>
    <string name="success_image">success image</string>
    <string name="home">home</string>
    <string name="rp">Rp</string>
    <string name="splash_subTitle">Buy Smarthone seamlessly \nWith NTT Docomo Japan</string>
    <string name="refresh">refresh</string>
    <string name="buying_history">Buying History</string>
    <string name="history">History</string>
    <string name="no_data_history">Sorry seems you don\'t have  history buying phone</string>
    <string name="payment">Payment:</string>
    <string-array name="payment_method">
        <item>Cash</item>
        <item>Virtual Account Billing</item>
    </string-array>
    <string-array name="type_phone">
        <item>Xperia 1</item>
        <item>Pixel 3 XL</item>
        <item>Galaxy S10+</item>
        <item>P30 Pro</item>
        <item>Mi 9</item>
        <item>Zenfone 6 ZS630KL</item>
        <item>OnePlus 7 Pro</item>
        <item>iPhone Xr</item>
        <item>iPhone Xs</item>
        <item>iPhone Xs Max</item>
    </string-array>
    <string-array name="price_phone">
        <item>15.000.000</item>
        <item>13.000.000</item>
        <item>23.499.000</item>
        <item>14.000.000</item>
        <item>8.000.000</item>
        <item>9.500.000</item>
        <item>14.200.000</item>
        <item>14.700.000</item>
        <item>20.100.000</item>
        <item>26.200.000</item>
    </string-array>
    <string-array name="image_phone">
        <item>https://images.sonymobile.com/image/api.sonymobile.com/files/01-xperia-1-gallery-product-image-black-00c6125a7bf934e6a16974d3792948e4.png?wid=500</item>
        <item>https://images-na.ssl-images-amazon.com/images/I/71lpDMLfQXL._SX569_.jpg</item>
        <item>https://images-na.ssl-images-amazon.com/images/I/61rkyzikWvL._SL1321_.jpg</item>
        <item>https://laz-img-sg.alicdn.com/p/6b404bef509edc65547e1cb173aabf65.jpg_500x500q100.jpg_.webp</item>
        <item>https://i01.appmifile.com/webfile/globalimg/products/pc/mi9/phone-2-global.png</item>
        <item>https://www.asus.com/media/global/products/E2hS4wNMijODMNuV/P_end_1000.png</item>
        <item>https://cdn2.gsmarena.com/vv/pics/oneplus/oneplus-7-pro-5.jpg</item>
        <item>https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xr/iphone-xr-red-select-201809?wid=470&amp;hei=556&amp;fmt=png-alpha&amp;.v=1551226038669</item>
        <item>https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xs/iphone-xs-space-select-2018?wid=940&amp;hei=1112&amp;fmt=png-alpha&amp;qlt=80&amp;.v=1550795411619</item>
        <item>https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone/xs/iphone-xs-gold-select-2018?wid=940&amp;hei=1112&amp;fmt=png-alpha&amp;qlt=80&amp;.v=1550795410474</item>
    </string-array>
    <string-array name="detail_phone">
        <item>Black Color, 128GB ROM, 6GB RAM</item>
        <item>Just Black Color, 128GB ROM, 4GB RAM</item>
        <item>Prism Green Color, 1TB ROM, 12GB RAM</item>
        <item>Breathing Crystal Color, 512GB ROM, 8GB RAM</item>
        <item>Ocean Blue Color, 256GB ROM, 8GB RAM</item>
        <item>Midnight Black Color, 256GB ROM, 8GB RAM</item>
        <item>Almond Color, 256GB ROM, 12GB RAM</item>
        <item>(PRODUCT)RED™ Color, 256GB ROM, 3GB RAM</item>
        <item>Space Grey Color, 256GB ROM, 4GB RAM</item>
        <item>Gold Color, 512GB ROM, 4 GB RAM</item>
    </string-array>
    <string-array name="full_detail_brand">
        <item>SONY</item>
        <item>Google</item>
        <item>Samsung</item>
        <item>Huawei</item>
        <item>Xiaomi</item>
        <item>Asus</item>
        <item>OnePlus</item>
        <item>Apple</item>
    </string-array>
    <string-array name="full_detail_phone_display">
        <item>6.5\" Display\n21:9 Aspect Ratio\n1644x3840 Resolution</item>
        <item>6.3\" Display\n18.5:9 Aspect Ratio\n1440x2960 Resolution</item>
        <item>6.4\" Display\n19:9 Aspect Ration\n1440x3040 Resolution</item>
        <item>6.47\" Display\n19.5:9 Aspect Ration\n1080x2340 Resolution</item>
        <item>6.39\" Display\n19.5:9 Aspect Ration\n1080x2340 Resolution</item>
        <item>6.4\" Display\n19.5:9 Aspect Ration\n1080x2340 Resolution</item>
        <item>6.67\" Display\n19.5:9 Aspect Ration\n1440x3120 Resolution</item>
        <item>6.1\" Display\n19.5:9 Aspect Ratio\n828x1792 Resolution</item>
        <item>5.8\" Display\n19.5:9 Aspect Ratio\n1125x2436 Resolution</item>
        <item>6.5\" Display\n19.5:9 Aspect Ratio\n1242x2688 Resolution</item>
    </string-array>
    <string-array name="full_detail_phone_hardware">
        <item>Snapdragon 855 Processor\n12 MP Camera\n3330mAh Battery</item>
        <item>Snapdragon 845 Processor\n12 MP Camera\n3430mAh Battery</item>
        <item>Exynos 9820 Processor\n16 MP Camera\n4100mAh Battery</item>
        <item>Kirin 980 Processor\n40 MP Camera\n4200mAh Battery</item>
        <item>Snapdragon 855 Processor\n48 MP Camera\n3300mAh Battery</item>
        <item>Snapdragon 855 Processor\n48 MP Camera\n5000mAh Battery</item>
        <item>Snapdragon 855 Processor\n48 MP Camera\n4000mAh Battery</item>
        <item>Apple A12 Bionic Processor\n12 MP Camera\n2942mAh Battery</item>
        <item>Apple A12 Bionic Processor\n12 MP Camera\n2658mAh Battery</item>
        <item>Apple A12 Bionic Processor\n12 MP Camera\n3174mAh Battery</item>
    </string-array>
</resources>
