<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".OptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/option_imgTop"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image_phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_docomo" />

            <TextView
                android:id="@+id/option_typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/type_phone"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_imgTop" />

            <TextView
                android:id="@+id/option_detailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_regular"
                android:text="@string/detail_phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_typeText" />

            <TextView
                android:id="@+id/option_FullDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/full_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_detailText" />

            <TextView
                android:id="@+id/option_FullDetailBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/brand"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetail"
                app:layout_constraintTop_toBottomOf="@id/option_detailText" />

            <TextView
                android:id="@+id/option_FullDetailBrandText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/full_detail"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetailHardware"
                app:layout_constraintTop_toBottomOf="@id/option_detailText" />

            <TextView
                android:id="@+id/option_FullDetailDisplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/display"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetail"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailBrandText" />

            <TextView
                android:id="@+id/option_FullDetailDisplayText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/full_detail"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetailHardware"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailBrandText" />

            <TextView
                android:id="@+id/option_FullDetailHardware"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/hardware"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetail"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailDisplayText" />

            <TextView
                android:id="@+id/option_FullDetailHardwareText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/full_detail"
                app:layout_constraintLeft_toRightOf="@id/option_FullDetailHardware"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailDisplayText" />

            <TextView
                android:id="@+id/option_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:textColor="@color/colorDocomo"
                android:text="@string/price"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailHardwareText" />

            <TextView
                android:id="@+id/option_textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textColor="@color/colorDocomo"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/phone"
                app:layout_constraintLeft_toRightOf="@id/option_Price"
                app:layout_constraintTop_toBottomOf="@id/option_FullDetailHardwareText" />

            <TextView
                android:id="@+id/option_nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_textPrice" />

            <EditText
                android:id="@+id/option_nameTextEdit"
                android:hint="@string/enter_your_full_name"
                android:autofillHints="@string/autofill_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/option_nameText" />

            <TextView
                android:id="@+id/option_addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_nameTextEdit" />

            <EditText
                android:id="@+id/option_addressTextEdit"
                android:hint="@string/enter_your_valid_address"
                android:autofillHints="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_addressText" />

            <TextView
                android:id="@+id/option_numberPhoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_addressTextEdit" />

            <EditText
                android:id="@+id/option_numberPhoneTextEdit"
                android:hint="@string/enter_your_valid_phone_number"
                android:autofillHints="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:inputType="phone"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_numberPhoneText" />

            <TextView
                android:id="@+id/option_EmailAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/email_address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_numberPhoneTextEdit" />

            <EditText
                android:id="@+id/option_EmailAddressTextEdit"
                android:hint="@string/enter_your_valid_email"
                android:autofillHints="@string/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_EmailAddressText" />

            <TextView
                android:id="@+id/option_textPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/opsi_payment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_EmailAddressTextEdit" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_phone"
                app:layout_constraintBottom_toBottomOf="@id/option_spinnerPayment"
                app:layout_constraintLeft_toLeftOf="@id/option_spinnerPayment"
                app:layout_constraintRight_toRightOf="@id/option_spinnerPayment"
                app:layout_constraintTop_toTopOf="@id/option_spinnerPayment"
                app:srcCompat="@drawable/default_spinner" />

            <Spinner
                android:id="@+id/option_spinnerPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:entries="@array/payment_method"
                app:layout_constraintLeft_toRightOf="@id/option_textPayment"
                app:layout_constraintTop_toBottomOf="@id/option_EmailAddressTextEdit" />


            <Button
                android:id="@+id/button"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_red"
                android:onClick="postCheckout"
                android:fontFamily="@font/comfortaa_semi_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:text="@string/checkout"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_spinnerPayment" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>