<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagePhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_phone"
        android:src="@drawable/ntt_docomo_company_logos" />

    <TextView
        android:id="@+id/typePhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagePhone"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/type_phone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detailPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagePhone"
        app:layout_constraintTop_toBottomOf="@id/typePhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/detail_phone"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pricePhone_text"
        app:layout_constraintStart_toEndOf="@id/imagePhone"
        app:layout_constraintTop_toBottomOf="@+id/detailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/pricePhone_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pricePhone_text"
        app:layout_constraintTop_toBottomOf="@+id/detailPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="8dp"
        android:text="@string/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>