<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity">

    <TextView
        android:id="@+id/success_titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="24sp"
        android:layout_marginTop="64dp"
        android:text="@string/success_title" />

    <TextView
        android:id="@+id/success_subTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/success_subTitle"
        app:layout_constraintTop_toBottomOf="@id/success_titleText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/comfortaa_semi_bold"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/success_imageBow"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/bow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_subTitleText"
        app:layout_constraintBottom_toTopOf="@id/success_imageHand"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/success_image"/>

    <Button
        android:id="@+id/success_btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintTop_toBottomOf="@id/success_subTitleText"
        app:layout_constraintLeft_toRightOf="@id/success_imageBow"
        app:layout_constraintBottom_toTopOf="@id/success_imageHand"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/comfortaa_semi_bold"
        android:onClick="postHome"
        android:background="@drawable/btn_red"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/success_imageHand"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_succesfull_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/success_image"/>
</androidx.constraintlayout.widget.ConstraintLayout>