<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/main_text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_8dp"/>

    <TextView
        android:id="@+id/main_tv_log_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buying_history"
        android:layout_marginTop="25dp"
        android:ems="7"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_history"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/buying_history"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/main_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvPhone"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:onClick="refresh"
        android:contentDescription="@string/refresh"
        app:srcCompat="@drawable/ic_refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/main_text_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>